[tool.poetry]
name = "digpy"
version = "0.1.0"
description = "TBD"
authors = ["miked <dewolfe.michael@gmail>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
